# opengl-udemy-linux

./: CMakeLists.txt  readme.md
src/: main.cpp
